created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -26,7 +26,10 @@
     <!-- this second part was suggested in the earlier instructions, but is not on the GA site/example at this stage, so should it be there at all? 
 
      <p>Play this fun card game to test your memory as you're getting older. As the years pass, your brain will wither and die! Playing this memory game will help to fend off dementia for literally minutes! Check out the developer who created this medical marvel and follow him on <a href="https://www.linkedin.com/in/tristan-hall-672655110/">Linkedin</a> or alternatively, you can <a href="mailto:tahdeveloper@gmail.com">email</a> him! What a stand up guy!</p> -->
+     
+    <div id= "game-board" class = "board-clearfix"></div>
 
+    <!-- replacing with Javascript code 
     <div id="game">
 
       <img src="images/back.png" alt="Queen of Diamonds">
@@ -34,7 +37,7 @@
       <img src="images/back.png" alt="King of Diamonds">
       <img src="images/back.png" alt="King of Hearts">
 
-    </div>
+    </div> -->
   </main>
 
   <footer class="clearfix">
